deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bedwars
  labels:
    app.kubernetes.io/part-of: bedwars-recoded
